# dlrun

./: CMakeLists.txt  build.sh  clean.sh
core/include/: device_schema.h  dlrun.h  memory.h
examples/: trival.cpp
